--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,17 @@ body {
 	user-select: none;
 }
 
+.desc {
+	color: rgba(0, 0, 0, 0.3);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100px;
+	padding: 20px;
+	text-align: center;
+}
+
 #root,
 .app {
 	display: flex;
